# django_templates_challenges

./: pyproject.toml
django_templates_homework/views/level_1/: a_phone_number.py
templates/level_1/: about_us.html  admin_page.html  contacts_info.html  phone_number.html  students.html
